--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@graphql-tools/schema": "^8.3.2",
     "@prisma/client": "^3.10.0",
     "apollo-server-core": "3.6.3",
     "apollo-server-express": "3.6.3",
+    "datasource-sql": "^1.6.0",
     "express": "4.17.3",
     "graphql": "16.3.0",
     "swagger-jsdoc": "^6.1.0",
