--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "generate:prisma": "prisma generate",
     "lint": "eslint src/**",
     "lint-fix": "eslint --fix src/**",
-    "start": "ts-node ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "ts-node-dev ./src/index.ts",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "seed": "ts-node ./scripts/seed.ts"
   },
   "keywords": [],
   "author": "",
@@ -38,6 +39,7 @@
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
     "prisma": "^3.10.0",
+    "ts-node-dev": "^1.1.8",
     "typescript": "^4.6.2"
   }
 }
