--- a/package.json
+++ b/package.json
@@ -4,42 +4,43 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
+    "build": "tsc ./src/index.ts",
     "generate:prisma": "prisma generate",
     "lint": "eslint src/**",
     "lint-fix": "eslint --fix src/**",
-    "dev": "ts-node-dev ./src/index.ts",
+    "dev": "ts-node-dev --exit-child ./src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "ts-node ./scripts/seed.ts"
+    "seed": "ts-node ./src/scripts/seed.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@graphql-tools/schema": "^8.3.2",
-    "@prisma/client": "^3.10.0",
-    "apollo-server-core": "3.6.3",
-    "apollo-server-express": "3.6.3",
-    "datasource-sql": "^1.6.0",
-    "express": "4.17.3",
-    "graphql": "16.3.0",
-    "swagger-jsdoc": "^6.1.0",
-    "swagger-ui-express": "^4.3.0",
-    "ts-node": "^10.6.0"
+    "@prisma/client": "^3.15.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.1",
+    "morgan": "^1.10.0",
+    "prisma-docs-generator": "^0.5.0",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.4.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
-    "@types/node": "^17.0.21",
+    "@types/morgan": "^1.9.3",
+    "@types/node": "^18.0.0",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.13.0",
-    "@typescript-eslint/parser": "^5.13.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
     "eslint": "^8.10.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-plugin-prettier": "^4.0.0",
-    "prisma": "^3.10.0",
-    "ts-node-dev": "^1.1.8",
-    "typescript": "^4.6.2"
+    "prisma": "^3.15.2",
+    "ts-node": "^10.8.1",
+    "ts-node-dev": "^2.0.0",
+    "typescript": "^4.7.3"
   }
 }
