--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "src/index.ts",
   "scripts": {
-    "build": "tsc ./src/index.ts",
+    "build": "tsc",
     "generate:prisma": "prisma generate",
     "lint": "eslint src/**",
     "lint-fix": "eslint --fix src/**",
