--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     "strict": true /* Enable all strict type-checking options. */,
     "skipLibCheck": true /* Skip type checking all .d.ts files. */,
-    "resolveJsonModule": true
-    // "baseUrl": "./src"
+    "resolveJsonModule": true,
+    "baseUrl": "./src",
+    "outDir": "dist"
   }
 }
