--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
   "main": "src/index.ts",
   "scripts": {
     "build": "tsc",
+    "dev": "ts-node-dev --exit-child ./src/index.ts",
     "generate:prisma": "prisma generate",
     "lint": "eslint src/**",
     "lint-fix": "eslint --fix src/**",
-    "dev": "ts-node-dev --exit-child ./src/index.ts",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "seed": "ts-node ./src/scripts/seed.ts"
+    "seed": "ts-node ./src/scripts/seed.ts",
+    "start": "node dist/index.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -20,7 +21,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "morgan": "^1.10.0",
-    "prisma-docs-generator": "^0.5.0",
     "swagger-jsdoc": "^6.2.1",
     "swagger-ui-express": "^4.4.0"
   },
