--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "lint": "eslint src/**",
     "lint-fix": "eslint --fix src/**",
     "seed": "ts-node ./src/scripts/seed.ts",
-    "start": "node dist/index.js",
+    "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
