--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "recipebookbackend",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.ts",
+  "main": "dist/index.js",
   "scripts": {
     "build": "tsc",
     "dev": "ts-node-dev --exit-child ./src/index.ts",
