--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "start": "node ./dist/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "engines": {
+    "node": "16.x"
+  },
   "license": "ISC",
   "dependencies": {
     "@prisma/client": "^3.15.2",
